@@ -515,6 +515,7 @@ Other memory:
 	* Added missing irqrestore() in timer_deletall().
 	* close() was not closing the underlying device.
 	* Added fsync()
+	* Added strspn() and strcspn()
 	* Started m68322
 </pre></ul>
 
