@@ -136,5 +136,6 @@
 	* Added missing irqrestore() in timer_deletall().
 	* close() was not closing the underlying device.
 	* Added fsync()
+	* Added strspn() and strcspn()
 	* Started m68322
 
